# project_template

./: .gitignore  CMakeLists.txt  ClassObject.cpp  ClassObject.hpp  build.bat  project.cpp
code/: CMakeLists.txt  ClassObject.cpp  ClassObject.hpp  project.cpp
